# octofriend

./: .env.template  .gitattributes  .gitignore  .gitmodules  .prettierignore  AGENTS.md  BATCH-TOOL-INSERTION-POINT.md  CHANGELOG.md  CODEBASE-MAP.md  CONTRIBUTING.md  Cargo.toml  IN-APP-UPDATES.txt  LICENSE  OCTO.md  PR_REVIEW.md  README.md  TODO-parallel-tools.md  TODO.md  TOOL-DISPATCH.md  babel.config.json  canary.fish  canary.ps1  canary.sh  drizzle.config.ts  install.ps1  install.sh  package-lock.json  package.json  readme.md  test-archon-intelligence.mjs  tsconfig.base.json  tsconfig.json  vitest.config.ts
crates/octofriend-agent/: Cargo.toml
crates/octofriend-agent/src/: autofix.rs  catalog.rs  compaction.rs  config.rs  dispatch.rs  event_stream.rs  history.rs  input.rs  model_plan.rs  notifications.rs  octofriend.rs  quota.rs  reasoning.rs  run_log.rs  runtime.rs  skills.rs  stream.rs  synthetic_quota.rs  system_prompt.rs  tools.rs  transport.rs  updates.rs
crates/octofriend-agent/src/catalog/: catalog.rs  connection.rs
crates/octofriend-agent/src/notifications/: ready.rs
crates/octofriend-agent/src/permissions/: whitelist.rs
crates/octofriend-agent/src/rendering_model/: diffs.rs  tool_results.rs
crates/octofriend-agent/src/run_events/: arc.rs  compaction.rs  finish.rs  response.rs  retries.rs
crates/octofriend-agent/src/run_log/: arc.rs  finish.rs
crates/octofriend-agent/src/stream/: auth_keys.rs  compiler_complete.rs  compiler_finalize.rs  http_stream.rs  stream.rs
crates/octofriend-agent/src/tools/: call_parse.rs  check.rs  definitions.rs  permission.rs  run.rs
crates/octofriend-agent/tests/: agentd.rs  notifications.rs  permissions.rs  rendering_model.rs  trajectory.rs
crates/octofriend-agent/tests/agentd/: history.rs  input.rs  skills.rs  transport.rs  updates.rs
crates/octofriend-agent/tests/notifications/: ready.rs
crates/octofriend-agent/tests/permissions/: whitelist.rs
crates/octofriend-agent/tests/rendering_model/: diffs.rs  messages.rs  tool_results.rs
crates/octofriend-agent/tests/trajectory/: arc.rs  compaction.rs  finish.rs  response.rs  retries.rs
crates/octofriend-config/: Cargo.toml
crates/octofriend-config/src/: files.rs  lib.rs
crates/octofriend-config/src/auth/: commands.rs  env.rs  keys.rs
crates/octofriend-config/src/files/: env_var.rs  migrations.rs  sanitize.rs
crates/octofriend-config/src/models/: catalog.rs  selection.rs
crates/octofriend-config/src/paths/: config.rs  workspace.rs
crates/octofriend-config/src/schema/: app.rs
crates/octofriend-config/tests/: files.rs  paths.rs  schema.rs
crates/octofriend-config/tests/auth/: commands.rs  env.rs  keys.rs
crates/octofriend-config/tests/files/: legacy_octofriend.rs  migrations.rs  migrations_auth.rs  sanitize.rs
crates/octofriend-config/tests/models/: catalog.rs  selection.rs
crates/octofriend-config/tests/paths/: config.rs  data.rs  workspace.rs
crates/octofriend-config/tests/schema/: check.rs
crates/octofriend-core/: Cargo.toml
crates/octofriend-core/src/: errors.rs
crates/octofriend-core/src/contracts/: cancellation.rs  render.rs  tool.rs
crates/octofriend-core/src/errors/: result.rs
crates/octofriend-core/tests/: contracts.rs
crates/octofriend-core/tests/contracts/: tool.rs
crates/octofriend-models/: Cargo.toml
crates/octofriend-models/src/compiler/: tool.rs  usage.rs
crates/octofriend-models/src/lowering/: checkpoint.rs  (+1 more)
crates/octofriend-store/: Cargo.toml
crates/octofriend-store/src/: record.rs
crates/octofriend-store/tests/: repositories.rs
crates/octofriend-text/: Cargo.toml
crates/octofriend-text/src/: lib.rs  strings.rs  wrapping.rs
crates/octofriend-text/tests/: text.rs
crates/octofriend-tools/: Cargo.toml
crates/octofriend-tools/src/: fs.rs  lib.rs  shell.rs  web.rs
crates/octofriend-tools/tests/: filesystem.rs  lsp.rs  mcp.rs  runtime.rs  shell.rs  skills.rs  web.rs
crates/octofriend-wire/: Cargo.toml
crates/octofriend-wire/src/: acp.rs  lib.rs
crates/octofriend-workspace/: Cargo.toml
crates/octofriend-workspace/src/: lib.rs  process.rs  workspace.rs
crates/octofriend-workspace/tests/: workspace.rs
crates/octofwen-agent/: Cargo.toml
crates/octofwen-agent/src/: agentd.rs  autofix.rs  catalog.rs  compaction.rs  config.rs  dispatch.rs  history.rs  input.rs  lib.rs  model_plan.rs  octofriend.rs  permissions.rs  quota.rs  reasoning.rs  run_log.rs  runtime.rs  skills.rs  synthetic_quota.rs  system_prompt.rs  transport.rs  updates.rs
crates/octofwen-agent/tests/: agentd.rs  notifications.rs  permissions.rs  rendering_model.rs  trajectory.rs
crates/octofwen-config/: Cargo.toml
crates/octofwen-config/src/: auth.rs  schema.rs
crates/octofwen-config/tests/: auth.rs  files.rs  models.rs  paths.rs  schema.rs
crates/octofwen-core/: Cargo.toml
crates/octofwen-core/src/: ids.rs  lib.rs
crates/octofwen-core/tests/: contracts.rs  text.rs
crates/octofwen-llm/: Cargo.toml
crates/octofwen-llm/src/: lib.rs
crates/octofwen-llm/tests/: compiler.rs  lowering.rs  prompts.rs  providers.rs
crates/octofwen-protocol/: Cargo.toml
crates/octofwen-protocol/src/: lib.rs
crates/octofwen-protocol/tests/: protocol.rs
crates/octofwen-storage/: Cargo.toml
crates/octofwen-storage/src/: lib.rs
crates/octofwen-storage/tests/: repositories.rs
crates/octofwen-store/: Cargo.toml
crates/octofwen-store/src/: lib.rs  repo.rs
crates/octofwen-store/tests/: repositories.rs
crates/octofwen-tools/: Cargo.toml
crates/octofwen-tools/src/: lib.rs  runtime.rs
crates/octofwen-tools/tests/: filesystem.rs  lsp.rs  mcp.rs  runtime.rs  shell.rs  skills.rs  web.rs
crates/octofwen-transport/: Cargo.toml
crates/octofwen-transport/src/: lib.rs  remote_files.rs
crates/octofwen-transport/tests/: local.rs
crates/octofwen-workspace/: Cargo.toml
crates/octofwen-workspace/src/: docker.rs  ssh.rs
fast-apply/unfat/: pyproject.toml
fast-apply/unfat/octofriend-fast-apply/: train.py
fast-apply/unfat/output/: together-eval.jsonl  together-train.jsonl
training/fix-json/unfat/: pyproject.toml  train.py
(+911 files in other folders)
