[package]
name = "octofriend-core"
description = "Shared product primitives and cross-domain contracts for octofriend"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
name = "octofriend_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
