[package]
name = "octofriend-models"
description = "Model request IR, providers, compiler, and prompts for octofriend"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
name = "octofriend_models"
path = "src/lib.rs"

[dependencies]
comrak.workspace = true
html2text.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
