[package]
name = "octofriend-text"
description = "Text width, wrapping, and string helpers for octofriend"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
name = "octofriend_text"
path = "src/lib.rs"

[dependencies]
octofriend-core.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
