[package]
name = "octofriend-tools"
description = "Tool runtime and tool implementations for octofriend"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
name = "octofriend_tools"
path = "src/lib.rs"

[dependencies]
octofriend-workspace.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonschema.workspace = true
reqwest.workspace = true
html2text.workspace = true

[lints]
workspace = true
