[package]
name = "octofwen-llm"
description = "LLM IR, lowering, providers, compiler, and prompts for Octofwen"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
name = "octofwen_llm"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
