[package]
name = "octofwen-protocol"
description = "Wire protocol contracts for Octofwen"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
name = "octofwen_protocol"
path = "src/lib.rs"

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
a2a-lf.workspace = true
agent-client-protocol-schema.workspace = true

[lints]
workspace = true
