[package]
name = "octofwen-transport"
description = "Local, Docker, and workspace transport primitives for Octofwen"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
name = "octofwen_transport"
path = "src/lib.rs"

[dependencies]

[lints]
workspace = true
